<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".ui.act.signin.ForgetPassWordTwoActivity">

    <RelativeLayout
        android:id="@+id/back_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44dp">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="@dimen/_50dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/img_black_back"
                android:layout_width="@dimen/_10dp"
                android:layout_height="@dimen/_19dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_centerHorizontal="true"
            android:text="重置登录密码"
            android:textStyle="bold"
            android:textColor="@color/color_010101"
            android:textSize="16.5dp"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_height="match_parent" />


    </RelativeLayout>

    <!--手机号-->
    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/rl_phone_num"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_below="@+id/back_layout"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginTop="@dimen/_70dp"
        android:layout_marginRight="@dimen/_40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/str_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/str_cz_your_password"
            android:textColor="@color/black"
            android:textSize="13.5dp" />

    </RelativeLayout>

    <!--验证码-->
    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_below="@+id/rl_phone_num"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/_40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/str_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/str_new_password"
            android:textColor="@color/black"
            android:textSize="13.5dp" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="19.5dp"
            android:background="@null"
            android:maxLength="20"
            android:digits="@string/rule_password"
            android:hint="6~20位（必须包含数字和字母）"
            android:maxLines="1"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_999999"
            android:textSize="@dimen/_13dp" />


        <RelativeLayout
            android:layout_alignParentRight="true"
            android:id="@+id/rl_old_eye"
            android:layout_width="30dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_eye_old"
                android:layout_width="@dimen/_17dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/img_eye_close" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_eeeeee" />

    </RelativeLayout>

    <!--修改-->
    <TextView
        android:id="@+id/tv_true_fix"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_below="@+id/rl_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginTop="@dimen/_221dp"
        android:layout_marginRight="@dimen/_40dp"
        android:background="@drawable/shape_2_conrner_solid_dddddd"
        android:gravity="center"
        android:text="@string/str_true_fix_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_16dp"
        android:textStyle="bold" />
</RelativeLayout>